2011-05-25  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: Fixed remuxing certain VC1 video tracks from Matroska
	files. Fix for bug 636.

2011-05-23  Moritz Bunkus  <moritz@bunkus.org>

	* Released v4.8.0.

	* mmg: bug fix (Windows): mmg will no longer convert the "mkvmerge
	executable" from just "mkvmerge" into a full path name when
	writing its preferences to the registry upon existing.

	* mkvmerge: enhancement: Added support for VobSub IDX files with
	negative "delay" fields.

2011-05-11  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: The 'doc type read version' EBML header field
	is only set to 2 even if a stereo mode other than 'none' is used
	for at least one video track. Fix for bug 625.

2011-05-06  Moritz Bunkus  <moritz@bunkus.org>

	* mkvpropedit: new feature: Added support for adding, replacing
	and removing chapters.

2011-05-03  Moritz Bunkus  <moritz@bunkus.org>

	* All: Avoided a segmentation fault in gcc by not including a
	pre-compiled header if FLAC or CURL support is disabled.

	* mkvmerge: bug fix: Reading DTS files stored in 14-to-16 mode
	were read partially.

2011-04-28  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: mkvmerge will rederive frame types for
	VC1 video tracks stored in Matroska files instead of relying on
	the container information. This fixes files created by
	e.g. MakeMKV that mark all frames as key frames even if they
	aren't.

2011-04-26  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed detection of AAC files with ADIF
	headers. Fix for bug 626.

2011-04-25  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: The 'doc type version' and 'doc type read
	version' EBML header fields are only set to 3 if a stereo mode
	other than 'none' is used for at least one video track. Fix for
	bug 625.

	* mkvmerge: enhancement: File identification for tracks read from
	Matroska files with a codec ID of "A_MS/ACM" will show the track's