@@ -31,6 +31,8 @@ private:
   dts_header_t m_first_header, m_previous_header;
   bool m_skipping_is_normal;
 
+  std::deque<int64_t> m_available_timecodes;
+
 public:
 
   dts_packetizer_c(generic_reader_c *p_reader, track_info_c &p_ti, const dts_header_t &dts_header, bool get_first_header_later = false) throw (error_c);
